SUBDIRS=src tests doc

pkgconfigdir = $(libdir)/pkgconfig

pkgconfig_DATA = \
xcb.pc \
xcb-xlib.pc \
xcb-composite.pc \
xcb-damage.pc \
xcb-dpms.pc \
xcb-glx.pc \
xcb-randr.pc \
xcb-record.pc \
xcb-render.pc \
xcb-res.pc \
xcb-screensaver.pc \
xcb-shape.pc \
xcb-shm.pc \
xcb-sync.pc \
xcb-xevie.pc \
xcb-xf86dri.pc \
xcb-xfixes.pc \
xcb-xinerama.pc \
xcb-xprint.pc \
xcb-xtest.pc \
xcb-xv.pc \
xcb-xvmc.pc

EXTRA_DIST = \
xcb.pc.in \
xcb-xlib.pc.in \
xcb-composite.pc.in \
xcb-damage.pc.in \
xcb-dpms.pc.in \
xcb-glx.pc.in \
xcb-randr.pc.in \
xcb-record.pc.in \
xcb-render.pc.in \
xcb-res.pc.in \
xcb-screensaver.pc.in \
xcb-shape.pc.in \
xcb-shm.pc.in \
xcb-sync.pc.in \
xcb-xevie.pc.in \
xcb-xinerama.pc.in \
xcb-xf86dri.pc.in \
xcb-xfixes.pc.in \
xcb-xprint.pc.in \
xcb-xtest.pc.in \
xcb-xv.pc.in \
xcb-xvmc.pc.in \
tools/README \
tools/api_conv.pl \
tools/constants \
autogen.sh
